<resources>
    <string name="app_name">Sound Meter 2</string>

    <string name="english" translatable="false">English</string>
    <string name="french" translatable="false">French</string>
    <string name="portuguese" translatable="false">Portuguese</string>
    <string name="spanish" translatable="false">Spanish</string>
    <string name="german" translatable="false">German</string>
    <string name="hindi" translatable="false">Hindi</string>
    <string name="indonesia" translatable="false">Indonesia</string>
    <string name="china" translatable="false">China</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="Send_Email">Send Email</string>
    <string name="There_is_no">There is no</string>
    <string name="thank_you">Thank you</string>
    <string name="rate_us">Rate us</string>
    <string name="not_now">Not now</string>
    <string name="this_action_may_contain_advertising">This action may contain advertising</string>
    <string name="your_opinion_matter_to_us">Your opinion matter to us</string>
    <string name="if_you_enjoy_this_know_your_device_would_you_mind_rating_us_on_the_google_play_then">If you enjoy this Sound Meter 2, would \nyou mind rating us on the Google Play, then?</string>

    <string name="language">Language</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="report_bugs_and_tell_us_what_to_improve">Report bugs and tell us what to improve</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="request">Request or feedback</string>
    <string name="send_email">Send by email</string>
    <string name="email_clients_not_found">Not found any Email client</string>
    <string name="version">Version</string>
    <string name="next">Next</string>
    <string name="quit">Quit</string>
    <string name="cancel">Cancel</string>
    <string name="title_intro_01">Title 01</string>
    <string name="title_intro_02">Title 02</string>
    <string name="title_intro_03">Title 03</string>
    <string name="content_intro_01">Content 01</string>
    <string name="content_intro_02">Content 02</string>
    <string name="content_intro_03">Content 03</string>
    <string name="continue_">Continue</string>
    <string name="are_you_sure_want_to_quit_app">Are you sure want to quit app?</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="text_permission_start_1"><font color='#E4D342'>“Sound meter”</font> requires the following permissions to provide services for you:</string>
    <string name="measure_the_sound_of_the_surrounding_environment">Measure the sound of the surrounding environment</string>
    <string name="home">Home</string>

    <string name="title_dialog_per">Grant these permissions to use <b>\"Metal Detector\"</b></string>
    <string name="content_dialog_per_1">Note: You can also grant permission in <b>Settings -> Apps -> Sound Meter 2 -> Microphone </b></string>
    <string name="content_dialog_per_2">Note: You can also grant permission in <b>Settings -> Apps -> Sound Meter 2 -> Notifications </b></string>
    <string name="content_dialog_per_3">Note: You can also grant permission in <b>Settings -> Apps -> Sound Meter 2 -> Storage </b></string>
    <string name="content_dialog_per_4">Note: You can also grant permission in <b>Settings -> Apps -> Sound Meter 2 -> Music and audio </b></string>
    <string name="version_1_0_0">Version 1.0.0</string>
    <string name="start_time">Start Time</string>
    <string name="duration">Duration</string>
    <string name="decibel_description">Decibel description</string>
    <string name="delete">Delete</string>
    <string name="history">History</string>
    <string name="info">Info</string>
    <string name="microtesla_values_information_table">Microtesla Values Information Table</string>
    <string name="magnetometer_condition">Magnetometer Condition</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="low_magnetic_field">Low Magnetic Field</string>
    <string name="detectable_range">Detectable Range</string>
    <string name="saturated_sensors">Saturated Sensors</string>
    <string name="calibrate_sensor">Calibrate Sensor</string>
    <string name="the_accuracy_of_the_magnetometer_sensor_is_unreliable_please_calibrate_the_sensor_as_shown_in_the_image_below">The accuracy of the magnetometer sensor is UNRELIABLE. Please calibrate the sensor as shown in the image below.</string>
    <string name="potential_deprogramming">Potential Deprogramming</string>
    <string name="fireworks">Fireworks</string>
    <string name="jet_takeoff_shotgun_firing">Jet takeoff, shotgun firing</string>
    <string name="police_siren_boom_box">Police siren, Boom box</string>
    <string name="trombone">Trombone</string>
    <string name="helicopter_train">Helicopter, Train</string>
    <string name="hairdryer_lawnmower">Hairdryer, Lawnmower</string>
    <string name="truck_city_traffic_noise">Truck, City traffic noise</string>
    <string name="car_city_traffic">Car, City traffic</string>
    <string name="conversation_quite_office">Conversation, Quite office</string>
    <string name="refrigerator">Refrigerator</string>
    <string name="moderate_stream">Moderate, Stream</string>
    <string name="whisper_rustling_leaves">Whisper, rustling leaves</string>
    <string name="rustling_leaves_mosquito">Rustling leaves, Mosquito</string>
    <string name="normal_breathing">Normal breathing</string>
    <string name="languages">Languages</string>
    <string name="metal_sensor">Metal Sensor</string>
    <string name="exit">Exit</string>
    <string name="audio_access">Audio access</string>
    <string name="memory_access">Memory access</string>
    <string name="agree_and_continue">Agree and Continue</string>
    <string name="setting">Setting</string>
    <string name="sound_meter">Sound Meter</string>
    <string name="accurately_measure_db_levels_and_manage_noise_exposure_to_protect_your_ears_and_preserve_a_healthy_auditory_environment">Accurately measure dB levels and manage noise exposure to protect your ears and preserve a healthy auditory environment.</string>
    <string name="got_it">Got it</string>
    <string name="sorry_your_device_doesn_t_have_a_magnetic_field_sensor_so_you_can_t_use_this_function">Sorry, your device doesn\'t have a magnetic field sensor so you can\'t use this function.</string>
    <string name="go_to_home">Go to home</string>
    <string name="permission">Permission</string>
    <string name="grant_these_permissions_to_use_sound_meter_2">Grant these permissions to use “<b>Sound Meter 2</b>”</string>
    <string name="stay">Stay</string>
    <string name="agree">Agree</string>
    <string name="please_grant_permissions_for_the_feature_to_be_used_normally">Please grant permissions for the feature to be used normally</string>
    <string name="ok">ok</string>
    <string name="set_record_s_name">Set Record’s Name</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="save">Save</string>
    <string name="set_threshold">Set Threshold</string>
    <string name="set">Set</string>
    <string name="easily_find_metal_objects_hidden_nearby">Easily find metal objects hidden nearby.</string>
    <string name="metal_detector">Metal Detector</string>
    <string name="audio_storage">Audio Storage</string>
    <string name="has_the_function_to_save_a_history_of_measurements_for_review">Has the function to save a history of measurements for review.</string>
    <string name="delete_the">"Delete the "</string>
    <string name="confirm">Confirm</string>
    <string name="rename">Rename</string>
    <string name="delete_the_selected_records_from_your_history">Delete the selected records from your history ?</string>
    <string name="select">Select</string>
    <string name="recording_saved">Recording saved</string>
    <string name="error_saving_recording">Error saving recording</string>
    <string name="unknown">Unknown</string>
    <string name="input_cannot_be_empty">input cannot be empty</string>
    <string name="from_0_to_6000">from 0 to 6000</string>
    <string name="threshold_set_to">Threshold set to </string>
    <string name="invalid_input">invalid input</string>
    <string name="title_already_exists">Title already exists.</string>
    <string name="record_renamed_successfully">Record renamed successfully</string>
    <string name="please_enter_a_name">Please enter a name</string>
    <string name="sound_sensor">Sound Sensor</string>
    <string name="failed_recoding">failed recoding</string>
    <string name="something_wrong">something wrong</string>

</resources>