<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="287dp"
        android:layout_height="243dp"
        android:background="@drawable/bg_dialog"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ellipsize="end"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:fontFamily="@font/pro_500"
            android:text="@string/permission"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/pro__400"
            android:textSize="14sp"
            android:includeFontPadding="false"
            android:lines="2"
            android:maxLines="2"
            android:ellipsize="end"
            android:layout_marginHorizontal="20dp"
            android:text="@string/grant_these_permissions_to_use_sound_meter_2"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tvContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="content dialog"
            android:includeFontPadding="false"
            android:textSize="14sp"
            android:fontFamily="@font/pro__400"
            android:lines="3"
            android:maxLines="3"
            android:ellipsize="end"
            android:layout_marginHorizontal="20dp"
            android:textColor="@color/white"
            tools:ignore="HardcodedText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvStay"
                android:layout_width="115.5dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/pro_500"
                android:gravity="center"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:paddingVertical="14dp"
                android:paddingHorizontal="32dp"
                android:text="@string/stay"
                android:background="@drawable/bg_button"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvAgree"
                android:layout_width="115.5dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/pro_500"
                android:background="@drawable/bg_button_yellow"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:paddingHorizontal="26.5dp"
                android:paddingVertical="14dp"
                android:gravity="center"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:text="@string/agree" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>