<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="17dp"
        android:background="@drawable/bg_dialog"
        android:paddingHorizontal="16dp"
        android:paddingVertical="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pro_500"
            android:gravity="center"
            android:text="@string/delete_the_selected_records_from_your_history"
            android:includeFontPadding="false"
            android:maxLines="2"
            android:lines="2"
            android:ellipsize="end"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:gravity="center"
            android:paddingHorizontal="38dp"
            android:background="@drawable/bg_button"
            android:fontFamily="@font/pro_500"
            android:textSize="16sp"
            android:layout_marginTop="36dp"
            android:paddingVertical="16dp"
            android:textColor="@color/white"
            android:layout_marginEnd="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"/>

        <TextView
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:gravity="center"
            android:paddingHorizontal="38dp"
            android:background="@drawable/bg_button_yellow"
            android:fontFamily="@font/pro_500"
            android:textSize="16sp"
            android:paddingVertical="16dp"
            android:textColor="@color/black"
            android:layout_marginStart="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_cancel"
            app:layout_constraintEnd_toEndOf="@id/tv_title"
            app:layout_constraintTop_toTopOf="@id/btn_cancel"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>