<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="17dp"
        android:background="@drawable/bg_dialog"
        android:paddingHorizontal="16dp"
        android:paddingVertical="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pro_500"
            android:gravity="center"
            android:text="@string/set_record_s_name"
            android:includeFontPadding="false"
            android:maxLines="2"
            android:lines="2"
            android:ellipsize="end"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/please_enter_name"
            android:fontFamily="@font/pro_500"
            android:textColor="@color/white"
            android:layout_marginTop="36dp"
            android:background="@android:color/transparent"
            android:textColorHint="#DDDDDD"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            />
        <ImageView
            android:id="@+id/iv_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edt_name"
            android:layout_marginTop="13dp"
            android:src="@drawable/img_line_enter_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <ImageView
            android:id="@+id/btn_clear"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="12dp"
            android:src="@drawable/ic_clear"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="@id/edt_name"
            app:layout_constraintBottom_toBottomOf="@id/edt_name"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:gravity="center"
            android:paddingHorizontal="38dp"
            android:background="@drawable/bg_button"
            android:fontFamily="@font/pro_500"
            android:textSize="16sp"
            android:layout_marginTop="24dp"
            android:paddingVertical="16dp"
            android:textColor="@color/white"
            android:layout_marginEnd="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_save"
            app:layout_constraintStart_toStartOf="@id/edt_name"
            app:layout_constraintTop_toBottomOf="@id/iv_line"/>

        <TextView
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:gravity="center"
            android:paddingHorizontal="38dp"
            android:background="@drawable/bg_button_yellow"
            android:fontFamily="@font/pro_500"
            android:textSize="16sp"
            android:layout_marginTop="24dp"
            android:paddingVertical="16dp"
            android:textColor="@color/black"
            android:layout_marginStart="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_cancel"
            app:layout_constraintEnd_toEndOf="@id/edt_name"
            app:layout_constraintTop_toBottomOf="@id/iv_line"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>