<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_bg">

    <TextView
        android:id="@+id/tv_exit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/pro__400"
        android:text="@string/exit"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_lock"
        android:layout_width="128dp"
        android:layout_height="162dp"
        android:layout_marginTop="7dp"
        android:src="@drawable/img_lock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_exit"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60.5dp"
        android:layout_marginTop="12dp"
        android:gravity="center_horizontal"
        android:includeFontPadding="false"
        android:maxLines="2"
        android:lines="2"
        android:ellipsize="end"
        android:text="@string/text_permission_start_1"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_lock" />

    <!--    <RelativeLayout-->
    <!--        android:id="@+id/layoutGrantNoti"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginHorizontal="32dp"-->
    <!--        android:layout_marginTop="40dp"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/tv_1">-->

    <!--        <TextView-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_centerVertical="true"-->
    <!--            android:layout_gravity="center"-->
    <!--            android:text="Notification access"-->
    <!--            android:textStyle="bold"-->
    <!--            android:textColor="@color/white"-->
    <!--            android:textSize="16dp" />-->

    <!--        <ImageView-->
    <!--            android:id="@+id/ivGrantNotification"-->
    <!--            android:layout_width="@dimen/_36sdp"-->
    <!--            android:layout_height="@dimen/_20sdp"-->
    <!--            android:layout_alignParentEnd="true"-->
    <!--            android:layout_centerVertical="true"-->
    <!--            android:layout_marginEnd="12sp"-->
    <!--            android:src="@drawable/ic_sw_off" />-->

    <!--    </RelativeLayout>-->

    <RelativeLayout
        android:id="@+id/layoutAudio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:text="@string/audio_access"
            android:textColor="@color/white"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:lines="1"
            android:ellipsize="end"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivAudio"
            android:layout_width="@dimen/_36sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="12sp"
            android:src="@drawable/ic_sw_off"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layoutMemory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutAudio">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:text="@string/memory_access"
            android:textColor="@color/white"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:lines="1"
            android:ellipsize="end"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivFile"
            android:layout_width="@dimen/_36sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="12sp"
            android:src="@drawable/ic_sw_off" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_continue"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="180dp"
        android:background="@drawable/bg_button_yellow"
        android:fontFamily="@font/pro_500"
        android:gravity="center"
        android:text="@string/agree_and_continue"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/layoutMemory" />


</androidx.constraintlayout.widget.ConstraintLayout>