<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="@dimen/_12sdp"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp"
        android:background="@drawable/bg_dialog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/pro_500"
            android:maxLines="2"
            android:lines="2"
            android:ellipsize="end"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/please_grant_permissions_for_the_feature_to_be_used_normally"
            android:textColor="@color/white"
            android:textSize="16sp" />



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:id="@+id/llAudio"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp">

            <ImageView
                android:id="@+id/icAudio"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="12dp"
                android:src="@drawable/ic_micro"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/_12sdp"
                android:ellipsize="end"
                android:fontFamily="@font/pro_700"
                android:gravity="start"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:text="@string/audio_access"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/ivGrantAudio"
                app:layout_constraintStart_toEndOf="@+id/icAudio"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:id="@+id/ivGrantAudio"
                android:layout_width="@dimen/_36sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="ImgGrantNoti"
                android:scaleType="fitXY"
                android:src="@drawable/ic_off_sw"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/llFile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="22dp">

            <ImageView
                android:id="@+id/icGrantFile"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="12dp"
                android:src="@drawable/ic_storage"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/_12sdp"
                android:ellipsize="end"
                android:fontFamily="@font/pro_700"
                android:gravity="start"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:layout_marginStart="@dimen/_8sdp"
                android:text="@string/memory_access"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/ivGrantFile"
                app:layout_constraintStart_toEndOf="@+id/icGrantFile"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:id="@+id/ivGrantFile"
                android:layout_width="@dimen/_36sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="ImgGrantNoti"
                android:scaleType="fitXY"
                android:src="@drawable/ic_off_sw"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:background="@drawable/bg_button_yellow"
            android:ellipsize="end"
            android:layout_gravity="end"
            android:textColor="@color/black"
            android:fontFamily="@font/pro_500"
            android:gravity="center"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:paddingHorizontal="32dp"
            android:paddingVertical="12dp"
            android:text="@string/ok"
            android:textSize="20sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>